--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ precision mediump float;
 uniform sampler2D texture;
 varying vec4      vColor;
 varying vec2      vTextureCoord;
-
+const vec2 resolution = vec2(512, 512);
 void main(void){
 	vec4 smpColor = texture2D(texture, vTextureCoord);
 	gl_FragColor  = vColor * smpColor;
