--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ void main(void){
 		</script>
 
 		<script id="fs" type="x-shader/x-fragment">
+/* 便利関数 http://qiita.com/edo_m18/items/71f6064f3355be7e4f45 */
 precision mediump float;
 
 uniform sampler2D texture;
