--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@ uniform sampler2D texture;
 varying vec4      vColor;
 varying vec2      vTextureCoord;
 const vec2 resolution = vec2(512, 512);
+const float redScale   = 0.298912;
+const float greenScale = 0.586611;
+const float blueScale  = 0.114478;
+const vec3  monochromeScale = vec3(redScale, greenScale, blueScale);
+
 void main(void){
 	vec4 smpColor = texture2D(texture, vTextureCoord);
+  float grayColor = dot(smpColor.rgb, monochromeScale);
+  smpColor = vec4(vec3(grayColor), 1.0);
 	gl_FragColor  = vColor * smpColor;
 }
 		</script>
